# DatalogInterpreter

./: Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.h  IDAutomaton.cpp  Lexer.cpp  Lexer.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  Relation.h  Rule.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  Token.cpp  Token.h  Tuple.h  UndefinedCommentAutomaton.cpp  UndefinedCommentAutomaton.h  UndefinedStringAutomaton.cpp  UndefinedStringAutomaton.h  main.cpp
